# FloatChat_RAG

./: .env.example  .gitignore  EDGE_CASES.md  MCP_SETUP.md  QUICKSTART.md  README.md  SETUP_FOR_FRIENDS.md  app.py  app_ollama.py  argo_api_pipeline.py  argo_vector_db.py  check_state.py  claude_desktop_config.json  pyproject.toml  requirements-streamlit.txt  requirements.txt  setup.py  setup_ollama.sh  test_mcp_tools.py  test_streamlit_components.py
config/: config.yaml
data/vector_db/: chroma.sqlite3
docs/manuals/: STREAMLIT_GUIDE.md
docs/setup/: API_KEY_GUIDE.md  OLLAMA_QUICKSTART.md
docs/technical/: FREE_LLM_OPTIONS.md  WEB_DEPLOYMENT_PLAN.md
mcp_server/: __init__.py  server.py
scripts/: check_db.py  index_vectors.py  run_pipeline.py
src/floatchat/: __init__.py
src/floatchat/pipeline/: __init__.py  client.py  processor.py  runner.py
src/floatchat/vector_db/: __init__.py  embedder.py  store.py
